# Coherent-Line-Drawing-2020

./: CMakeLists.txt  README.md
include/: CLD.h  ETF.h  postProcessing.h
results/: cli.sh
src/: CLD.cpp  ETF.cpp  cld-cli.cpp  cld-oflow-cli.cpp  cli.cpp  etf-cli.cpp  gui.cpp  lic-cli.cpp  lic_image-cli.cpp  postProcessing.cpp
